--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -7,3 +7,273 @@
   width: 200px;
   height: 200px;
 }
+
+#audio-player {
+  background-color: rgb(120, 120, 120);
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 75px;
+  text-align: center;
+}
+
+#song-list {
+  margin: 30px auto;
+  text-align: center;
+}
+
+.song {
+  margin: auto;
+  background-color: rgb(120, 120, 120);
+  width: 400px;
+  padding: 0 50px;
+  border-radius: 5px;
+}
+
+.song > input {
+  display: inline-block;
+  position: relative;
+  top: 10px;
+  right: 20px;
+}
+
+#song-list-play {
+  width: 60px;
+  outline: none;
+}
+
+.song > p {
+  display: inline-block;
+  position: relative;
+  bottom: 2px;
+}
+
+.song > img {
+  display: inline-block;
+  position: relative;
+  bottom: 15px;
+}
+
+.song-image {
+  width: 50px;
+}
+
+#song-player-play {
+  width: 50px;
+  outline: none;
+}
+
+#song-player-play-div {
+  display: inline-block;
+  position: relative;
+  top: 13px;
+}
+
+#song-player-time-div {
+  display: inline-block;
+  position: relative;
+  margin: 0 50px;
+  bottom: 10px;
+}
+
+#song-player-volume-div {
+  display: inline-block;
+  position: relative;
+  bottom: 10px;
+}
+
+#song-player-volume {
+  -webkit-appearance: none;
+  width: 125px;
+}
+
+#song-player-volume:focus {
+  outline: none;
+}
+
+#song-player-volume::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 2px;
+  cursor: pointer;
+  box-shadow: 0.7px 0.7px 4.8px #000, 0 0 0.7px #0d0d0d;
+  background: #3071a9;
+  border-radius: 1px;
+  border: 0 solid #010101;
+}
+
+#song-player-volume::-webkit-slider-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 19px;
+  width: 10px;
+  border-radius: 1px;
+  background: #ffffff;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -8.5px;
+}
+
+#song-player-volume:focus::-webkit-slider-runnable-track {
+  background: #367ebd;
+}
+
+#song-player-volume::-moz-range-track {
+  width: 100%;
+  height: 2px;
+  cursor: pointer;
+  box-shadow: 0.7px 0.7px 4.8px #000000, 0px 0px 0.7px #0d0d0d;
+  background: #3071a9;
+  border-radius: 1px;
+  border: 0px solid #010101;
+}
+
+#song-player-volume::-moz-range-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 19px;
+  width: 10px;
+  border-radius: 1px;
+  background: #ffffff;
+  cursor: pointer;
+}
+
+#song-player-volume::-ms-track {
+  width: 100%;
+  height: 2px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+
+#song-player-volume::-ms-fill-lower {
+  background: #2a6495;
+  border: 0px solid #010101;
+  border-radius: 2px;
+  box-shadow: 0.7px 0.7px 4.8px #000000, 0px 0px 0.7px #0d0d0d;
+}
+
+#song-player-volume::-ms-fill-upper {
+  background: #3071a9;
+  border: 0px solid #010101;
+  border-radius: 2px;
+  box-shadow: 0.7px 0.7px 4.8px #000000, 0px 0px 0.7px #0d0d0d;
+}
+
+#song-player-volume::-ms-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 19px;
+  width: 10px;
+  border-radius: 1px;
+  background: #ffffff;
+  cursor: pointer;
+  height: 2px;
+}
+
+#song-player-volume:focus::-ms-fill-lower {
+  background: #3071a9;
+}
+
+#song-player-volume:focus::-ms-fill-upper {
+  background: #367ebd;
+}
+
+
+#song-player-time {
+  -webkit-appearance: none;
+  width: 500px;
+  margin: auto;
+}
+
+#song-player-time:focus {
+  outline: none;
+}
+
+#song-player-time::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 2px;
+  cursor: pointer;
+  box-shadow: 0.7px 0.7px 4.8px #000000, 0px 0px 0.7px #0d0d0d;
+  background: #3071a9;
+  border-radius: 1px;
+  border: 0px solid #010101;
+}
+
+#song-player-time::-webkit-slider-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 20px;
+  width: 19px;
+  border-radius: 50px;
+  background: #ffffff;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -9px;
+}
+
+#song-player-time:focus::-webkit-slider-runnable-track {
+  background: #367ebd;
+}
+
+#song-player-time::-moz-range-track {
+  width: 100%;
+  height: 2px;
+  cursor: pointer;
+  box-shadow: 0.7px 0.7px 4.8px #000000, 0px 0px 0.7px #0d0d0d;
+  background: #3071a9;
+  border-radius: 1px;
+  border: 0px solid #010101;
+}
+
+#song-player-time::-moz-range-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 20px;
+  width: 19px;
+  border-radius: 50px;
+  background: #ffffff;
+  cursor: pointer;
+}
+
+#song-player-time::-ms-track {
+  width: 100%;
+  height: 2px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+
+#song-player-time::-ms-fill-lower {
+  background: #2a6495;
+  border: 0px solid #010101;
+  border-radius: 2px;
+  box-shadow: 0.7px 0.7px 4.8px #000000, 0px 0px 0.7px #0d0d0d;
+}
+
+#song-player-time::-ms-fill-upper {
+  background: #3071a9;
+  border: 0px solid #010101;
+  border-radius: 2px;
+  box-shadow: 0.7px 0.7px 4.8px #000000, 0px 0px 0.7px #0d0d0d;
+}
+
+#song-player-time::-ms-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 20px;
+  width: 19px;
+  border-radius: 50px;
+  background: #ffffff;
+  cursor: pointer;
+  height: 2px;
+}
+
+#song-player-time:focus::-ms-fill-lower {
+  background: #3071a9;
+}
+
+#song-player-time:focus::-ms-fill-upper {
+  background: #367ebd;
+}
