--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -1,3 +1,8 @@
+body {
+  background: url(images/background.jpg) no-repeat center center fixed;
+  background-size: cover;
+}
+
 .row-grid {
   margin-top: 10px;
   margin-bottom: 10px;
@@ -8,272 +13,125 @@
   height: 200px;
 }
 
-#audio-player {
-  background-color: rgb(120, 120, 120);
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  height: 75px;
-  text-align: center;
-}
-
-#song-list {
-  margin: 30px auto;
+#songs {
+  margin: 20px 0;
   text-align: center;
 }
 
 .song {
-  margin: auto;
-  background-color: rgb(120, 120, 120);
-  width: 400px;
-  padding: 0 50px;
+  width: 500px;
+  height: 75px;
+  text-align: left;
+  border: 2px solid rgb(64, 73, 89);
   border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.8);
+  padding: 0;
+  display: block;
+  margin: 20px auto;
 }
 
-.song > input {
+.song:focus {
+  outline: 0;
+  box-shadow: 0 0 6px 2px rgb(220, 252, 255);
+}
+
+.song-info {
   display: inline-block;
-  position: relative;
-  top: 10px;
-  right: 20px;
+  font-family: 'Exo 2', sans-serif;
+  vertical-align: top;
 }
 
-#song-list-play {
-  width: 60px;
-  outline: none;
+.song-info > p {
+  margin: 0;
+  position: relative;
+  top: 11px;
+  line-height: 25px;
 }
 
-.song > p {
-  display: inline-block;
-  position: relative;
-  bottom: 2px;
+.title {
+  font-size: 1.5em;
+  color: rgb(220, 252, 255);
 }
 
-.song > img {
-  display: inline-block;
-  position: relative;
-  bottom: 15px;
+.artist {
+  font-size: 1em;
+  color: rgb(220, 252, 255);
 }
 
 .song-image {
   width: 50px;
+  height: 50px;
+  display: inline-block;
+  position: relative;
+  margin: 10px 10px 10px 50px;
+  border-radius: 5px;
+  border: 2px solid rgb(220, 252, 255);
+  vertical-align: unset;
 }
 
-#song-player-play {
-  width: 50px;
+#navbar {
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.8);
+  height: 75px;
+}
+
+#navbar > h1 {
+  font-family: 'Work Sans', cursive;
+  vertical-align: middle;
+  font-size: 4em;
+  color: rgb(220, 252, 255);
+  position: relative;
+  bottom: 4px;
+  letter-spacing: 0.05em;
+  font-weight: bold;
+  display: inline-block;
+}
+
+#upload-button {
+  position: absolute;
+  right: 10px;
+  top: 3px;
+  margin: 10px;
+  border: 3px solid rgb(220, 252, 255);
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, 0);
+  font-family: 'Oswald';
+  color: rgb(220, 252, 255);
+  font-size: 1.5em;
+}
+
+#upload-button:focus {
   outline: none;
 }
 
-#song-player-play-div {
-  display: inline-block;
+#upload-button:hover {
+  color: rgb(250, 252, 255);
+  cursor: pointer;
+}
+
+.hidden {
+  display: none;
+}
+
+#upload-form {
+  width: 800px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+}
+
+#upload-form-card {
+  background: rgb(247, 247, 247);
+}
+
+.song-play {
+  width: 30px;
   position: relative;
-  top: 13px;
+  bottom: 20px;
+  left: 28px;
 }
 
-#song-player-time-div {
-  display: inline-block;
-  position: relative;
-  margin: 0 50px;
-  bottom: 10px;
-}
-
-#song-player-volume-div {
-  display: inline-block;
-  position: relative;
-  bottom: 10px;
-}
-
-#song-player-volume {
-  -webkit-appearance: none;
-  width: 125px;
-}
-
-#song-player-volume:focus {
+.song-play:focus {
   outline: none;
-}
-
-#song-player-volume::-webkit-slider-runnable-track {
-  width: 100%;
-  height: 2px;
-  cursor: pointer;
-  box-shadow: 0.7px 0.7px 4.8px #000, 0 0 0.7px #0d0d0d;
-  background: #3071a9;
-  border-radius: 1px;
-  border: 0 solid #010101;
-}
-
-#song-player-volume::-webkit-slider-thumb {
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  border: 1px solid #000000;
-  height: 19px;
-  width: 10px;
-  border-radius: 1px;
-  background: #ffffff;
-  cursor: pointer;
-  -webkit-appearance: none;
-  margin-top: -8.5px;
-}
-
-#song-player-volume:focus::-webkit-slider-runnable-track {
-  background: #367ebd;
-}
-
-#song-player-volume::-moz-range-track {
-  width: 100%;
-  height: 2px;
-  cursor: pointer;
-  box-shadow: 0.7px 0.7px 4.8px #000000, 0px 0px 0.7px #0d0d0d;
-  background: #3071a9;
-  border-radius: 1px;
-  border: 0px solid #010101;
-}
-
-#song-player-volume::-moz-range-thumb {
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  border: 1px solid #000000;
-  height: 19px;
-  width: 10px;
-  border-radius: 1px;
-  background: #ffffff;
-  cursor: pointer;
-}
-
-#song-player-volume::-ms-track {
-  width: 100%;
-  height: 2px;
-  cursor: pointer;
-  background: transparent;
-  border-color: transparent;
-  color: transparent;
-}
-
-#song-player-volume::-ms-fill-lower {
-  background: #2a6495;
-  border: 0px solid #010101;
-  border-radius: 2px;
-  box-shadow: 0.7px 0.7px 4.8px #000000, 0px 0px 0.7px #0d0d0d;
-}
-
-#song-player-volume::-ms-fill-upper {
-  background: #3071a9;
-  border: 0px solid #010101;
-  border-radius: 2px;
-  box-shadow: 0.7px 0.7px 4.8px #000000, 0px 0px 0.7px #0d0d0d;
-}
-
-#song-player-volume::-ms-thumb {
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  border: 1px solid #000000;
-  height: 19px;
-  width: 10px;
-  border-radius: 1px;
-  background: #ffffff;
-  cursor: pointer;
-  height: 2px;
-}
-
-#song-player-volume:focus::-ms-fill-lower {
-  background: #3071a9;
-}
-
-#song-player-volume:focus::-ms-fill-upper {
-  background: #367ebd;
-}
-
-
-#song-player-time {
-  -webkit-appearance: none;
-  width: 500px;
-  margin: auto;
-}
-
-#song-player-time:focus {
-  outline: none;
-}
-
-#song-player-time::-webkit-slider-runnable-track {
-  width: 100%;
-  height: 2px;
-  cursor: pointer;
-  box-shadow: 0.7px 0.7px 4.8px #000000, 0px 0px 0.7px #0d0d0d;
-  background: #3071a9;
-  border-radius: 1px;
-  border: 0px solid #010101;
-}
-
-#song-player-time::-webkit-slider-thumb {
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  border: 1px solid #000000;
-  height: 20px;
-  width: 19px;
-  border-radius: 50px;
-  background: #ffffff;
-  cursor: pointer;
-  -webkit-appearance: none;
-  margin-top: -9px;
-}
-
-#song-player-time:focus::-webkit-slider-runnable-track {
-  background: #367ebd;
-}
-
-#song-player-time::-moz-range-track {
-  width: 100%;
-  height: 2px;
-  cursor: pointer;
-  box-shadow: 0.7px 0.7px 4.8px #000000, 0px 0px 0.7px #0d0d0d;
-  background: #3071a9;
-  border-radius: 1px;
-  border: 0px solid #010101;
-}
-
-#song-player-time::-moz-range-thumb {
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  border: 1px solid #000000;
-  height: 20px;
-  width: 19px;
-  border-radius: 50px;
-  background: #ffffff;
-  cursor: pointer;
-}
-
-#song-player-time::-ms-track {
-  width: 100%;
-  height: 2px;
-  cursor: pointer;
-  background: transparent;
-  border-color: transparent;
-  color: transparent;
-}
-
-#song-player-time::-ms-fill-lower {
-  background: #2a6495;
-  border: 0px solid #010101;
-  border-radius: 2px;
-  box-shadow: 0.7px 0.7px 4.8px #000000, 0px 0px 0.7px #0d0d0d;
-}
-
-#song-player-time::-ms-fill-upper {
-  background: #3071a9;
-  border: 0px solid #010101;
-  border-radius: 2px;
-  box-shadow: 0.7px 0.7px 4.8px #000000, 0px 0px 0.7px #0d0d0d;
-}
-
-#song-player-time::-ms-thumb {
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  border: 1px solid #000000;
-  height: 20px;
-  width: 19px;
-  border-radius: 50px;
-  background: #ffffff;
-  cursor: pointer;
-  height: 2px;
-}
-
-#song-player-time:focus::-ms-fill-lower {
-  background: #3071a9;
-}
-
-#song-player-time:focus::-ms-fill-upper {
-  background: #367ebd;
 }
