--- a/server/public/player-styles.css
+++ b/server/public/player-styles.css
@@ -1,6 +1,6 @@
 #song-player {
-  background-color: rgba(0, 0, 0, 0.8);
-  position: absolute;
+  background-color: rgb(20, 20, 20);
+  position: fixed;
   bottom: 0;
   width: 100%;
   height: 75px;
@@ -142,7 +142,6 @@
   border-radius: 1px;
   background: #fff;
   cursor: pointer;
-  height: 2px;
 }
 
 #song-player-volume:focus::-ms-fill-lower {
@@ -240,7 +239,6 @@
   border-radius: 50px;
   background: #fff;
   cursor: pointer;
-  height: 2px;
 }
 
 #song-player-time:focus::-ms-fill-lower {
